--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,10 +3,10 @@
    */
 
 .main-container {
-  background-image: url(http://i.imgur.com/0IYtdou.jpg);
+  background-image: url(http://i.imgur.com/4AQsOoh.jpg);
   max-width:100%; 
   max-height:100%; 
-  background-size:cover; 
+  background-size:100% 110%;
   background-repeat:no-repeat; 
   position:relative;
 }
