--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -182,7 +182,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-mid-8">
+                <div class="col-md-8 col-md-offset-2">
                     <p>
                     Italian Sushi is not endorsed by Riot Games and neither
                     reflects the views or opinions of Riot Games nor anyone 
