--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Italian Sushi</a>
+                <a class="navbar-brand" href="/">Italian Sushi</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -74,6 +74,7 @@
                     <li><a href="../logout/">{{ user.username }} | Logout</a></li> 
                     {% else %}
                     <li><a href="" class="login-popup">Login</a></li> 
+                    <li><a href="" class="createuser-popup">Create Account</a></li> 
                     {% endif %}
                     <!-- <li><a href="../navbar/">Default</a></li>
                     <li><a href="../navbar-static-top/">Static top</a></li>
