--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,16 +3,17 @@
    */
 
 .main-container {
-  background-image: url(http://i.imgur.com/4AQsOoh.jpg);
+  background-image: url(http://i.imgur.com/iUEnIob.jpg);
   max-width:100%; 
   max-height:100%; 
-  background-size:100% 110%;
+  background-size:100% 100%;
   background-repeat:no-repeat; 
   position:relative;
 }
 
 .inner-error-container {
-  padding: 35% 10%;
+  padding: 35% 5% 35% 10%;
+  margin: 3%;
   background-color: ;
 }
 
