--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,15 +6,15 @@
   background-image: url(http://i.imgur.com/iUEnIob.jpg);
   max-width:100%; 
   max-height:100%; 
-  background-size:100% 100%;
+  background-size:cover;
   background-repeat:no-repeat; 
   position:relative;
 }
 
 .inner-error-container {
-  padding: 35% 5% 35% 10%;
-  margin: 3%;
-  background-color: ;
+  padding: 35% 7% 35% 13%;
+  /*margin: 3%;*/
+  background-color: #DBDBDB;
 }
 
 .error-container {
