--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Italian Sushi</title>
+    <title>iTahmSets</title>
 
 
     <!-- <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet"> -->
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Italian Sushi</a>
+                <a class="navbar-brand" href="/">iTahmSets</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -185,7 +185,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <p>
-                    Italian Sushi is not endorsed by Riot Games and neither
+                    iTahmSets is not endorsed by Riot Games and neither
                     reflects the views or opinions of Riot Games nor anyone 
                     officially involved in producing or managing League of Legends. 
                     League of Legends and Riot Games are trademarks or registered 
