--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -25,15 +25,13 @@
 </head>
 
 
-<div class="alert alert-success fade in bot-page-alert" role="alert" 
-    style="position: fixed;bottom: -10px;z-index:9999;width:300px;visibility:hidden;"visibility:hidden;>
+<div class="alert alert-success fade in bot-page-alert" role="alert">
     <span class="glyphicon glyphicon-exclamation-sign"></span>
     <a href="" class="close" data-dismiss="alert">&times;</a>
     <span id="alert-success-span"></span>
 </div>
 
-<div class="alert alert-danger fade in" role="alert"
-    style="position: fixed;bottom: -10px;z-index:9999;width:300px;visibility:hidden;">
+<div class="alert alert-danger fade in bot-page-alert" role="alert">
     <span class="glyphicon glyphicon-exclamation-sign"></span>
     <a href="" class="close" data-dismiss="alert">&times;</a>
     <span id="alert-danger-span"></span>
@@ -84,8 +82,8 @@
       </div>
     </nav>
 
-    <!-- Adapted from Bootstrap 3.1.0 snippet by Septian-Bhoechie 
-   from http://bootsnipp.com/snippets/featured/simple-vertical-tab -->
+    <!-- This section adapted from a Bootstrap 3.1.0 snippet by Septian-Bhoechie 
+        from http://bootsnipp.com/snippets/featured/simple-vertical-tab -->
 
     <div class="container section-container main-container">
     	<div class="row">
@@ -96,7 +94,7 @@
                       <h4 class="fa fa-cloud-upload"></h4><br/>Upload Item Sets
                     </a>
                     <a href="#" class="list-group-item text-center">
-                      <h4 class="fa fa-cloud-upload"></h4><br/>Feature2
+                      <h4 class="fa fa-gamepad"></h4><br/>Matchup Item Generator
                     </a>
                     <a href="#" class="list-group-item text-center">
                       <h4 class="fa fa-home"></h4><br/>Feature3
@@ -118,16 +116,20 @@
                             can download them on other devices. </h5>
 
                             {% if not logged_in %}
-                            <h5 class="color-header">It looks like you aren't logged in. 
-                            You must log in to save item sets to your profile. 
-                            If you don't have an account, you can create one for free! </h5>
+                            <h5 class="color-header">
+                                It looks like you aren't logged in. 
+                                You must log in to save item sets to your profile. 
+                                If you don't have an account, you can create one for free! 
+                            </h5>
                             
                             <a href="#" id="login-btn" class="btn btn-md btn-primary btn-side login-popup">
                                 Log In</a>
                             &nbsp;
                             <a href="#" id="createuser-btn" class="btn btn-md btn-primary btn-side createuser-popup">
                                 Create Account</a>
+
                             {% elif logged_in %}
+
                             <form method="POST" enctype="multipart/form-data" action="/upload/">
                                 {% csrf_token %}
                                 <input type="file" style="margin-bottom:5px" name="json" required/>
@@ -135,21 +137,24 @@
                                 <a href="#" id="viewfiles-btn" class="btn btn-md btn-primary btn-side viewfiles-popup">
                                 View Uploaded Sets</a>
                             </form>
+                            
                             {% endif %}
                         </center>
                     </div>
                     <div class="bhoechie-tab-content">
                         <center>
-                          <h1 class="fa fa-cloud-upload color-icon"></h1>
-                          <h2 class="color-header">Coming Soon</h2>
-                          <h3 class="color-header">Upload your item sets</h3>
+                            <h1 class="fa fa-gamepad color-icon"></h1>
+                            <h2 class="color-header">Matchup Item Generator</h2>
+                            <h5 class="color-header">
+                                Enter your champion and lane opponent to get an item set customized for your matchup.
+                            </h5>
                         </center>
                     </div>
                     <div class="bhoechie-tab-content">
                         <center>
                           <h1 class="fa fa-home color-icon"></h1>
                           <h2 class="color-header">Coming Soon</h2>
-                          <h3 class="color-header">View pro item sets</h3>
+                          <h3 class="color-header">Build a custom item sets</h3>
                         </center>
                     </div>
                     <div class="bhoechie-tab-content">
@@ -163,7 +168,7 @@
                         <center>
                           <h1 class="fa fa-credit-card color-icon"></h1>
                           <h2 class="color-header">Coming Soon</h2>
-                          <h3 class="color-header">Get an item set for your matchup</h3>
+                          <h3 class="color-header">Money Money Money</h3>
                         </center>
                     </div>
                 </div>
@@ -176,7 +181,7 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <p>
-                    iTahmSets is not endorsed by Riot Games and neither
+                    iTahmSets isn't endorsed by Riot Games and neither
                     reflects the views or opinions of Riot Games nor anyone 
                     officially involved in producing or managing League of Legends. 
                     League of Legends and Riot Games are trademarks or registered 
@@ -440,7 +445,7 @@
 
         if (uploadstatus == "success")
         {
-            document.getElementById('alert-success-span').innerHTML = "Successful file upload!"
+            document.getElementById('alert-success-span').innerHTML = "File upload successful!"
             $('#alert-success-span').parent().css('visibility', 'visible');
         }
         else if (uploadstatus == "limitreached")
