--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="{% static "css/index.css" %}" rel="stylesheet">
 
-    <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script>
+    <!-- <script type="text/javascript" src="{% static "js/jquery.min.js" %}"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{% static "js/bootbox.min.js" %}"></script>
@@ -116,12 +117,12 @@
                             can download them on other devices. </h5>
 
                             {% if not logged_in %}
+
                             <h5 class="color-header">
                                 It looks like you aren't logged in. 
                                 You must log in to save item sets to your profile. 
                                 If you don't have an account, you can create one for free! 
                             </h5>
-                            
                             <a href="#" id="login-btn" class="btn btn-md btn-primary btn-side login-popup">
                                 Log In</a>
                             &nbsp;
@@ -137,7 +138,7 @@
                                 <a href="#" id="viewfiles-btn" class="btn btn-md btn-primary btn-side viewfiles-popup">
                                 View Uploaded Sets</a>
                             </form>
-                            
+
                             {% endif %}
                         </center>
                     </div>
