--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -97,7 +97,7 @@
                       <h4 class="fa fa-cloud-upload"></h4><br/>Upload Item Sets
                     </a>
                     <a href="#" class="list-group-item text-center">
-                      <h4 class="fa fa-gamepad"></h4><br/>Matchup Item Generator
+                      <h4 class="fa fa-gamepad"></h4><br/>Lane Matchup Generator
                     </a>
                     <a href="#" class="list-group-item text-center">
                       <h4 class="fa fa-home"></h4><br/>Feature3
@@ -147,7 +147,7 @@
                     <div class="bhoechie-tab-content">
                         <center>
                             <h1 class="fa fa-gamepad color-icon"></h1>
-                            <h2 class="color-header">Matchup Item Generator</h2>
+                            <h2 class="color-header">Lane Matchup Generator</h2>
                             <h5 class="color-header">
                                 Enter your champion and lane opponent to get an item set customized for your matchup.
                             </h5>
@@ -155,7 +155,7 @@
                                 <input class="champ-input" id="champ1" placeholder=" Your Champion"/>
                             </div>
                             <div class="ui-widget col-sm-4">
-                                <input class="champ-input" id="champ2" placeholder=" Lane Opponent"/>
+                                <input class="champ-input" id="champ2" placeholder=" Your Opponent"/>
                             </div>
                             <div class="col-sm-3 col-sm-offset-0 col-xs-6 col-xs-offset-3">
                                 <select id="matchup-lane" class="form-control">
