summ id and image change

--- a/templates/italiansushi/index.html
+++ b/templates/italiansushi/index.html
@@ -88,7 +88,7 @@
     <!-- This section adapted from a Bootstrap 3.1.0 snippet by Septian-Bhoechie 
         from http://bootsnipp.com/snippets/featured/simple-vertical-tab -->
 
-    <div class="container section-container main-container">
+    <div class="container section-container main-container" style="background-image: {% static "img/tk.jpg"%}">
     	<div class="row">
             <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 bhoechie-tab-container">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
