--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,7 +3,7 @@
    */
 
 .main-container {
-  background-image: url(http://i.imgur.com/iUEnIob.jpg);
+  background-image: url("http://i.imgur.com/M07FxXD.jpg");
   max-width:100%; 
   max-height:100%; 
   background-size:cover;
@@ -18,7 +18,7 @@
 }
 
 .error-container {
-  /*background-image: url(http://i.imgur.com/GU9It15.jpg);*/
+  background-image: url(http://i.imgur.com/GU9It15.jpg);
   max-width:100%; 
   max-height:100%; 
   background-size:100% 100%;
