--- a/static/css/index.css
+++ b/static/css/index.css
@@ -26,6 +26,21 @@
   position:relative;
 }
 
+.about-container {
+  background-image: url(http://i.imgur.com/iUEnIob.jpg);
+  max-width:100%; 
+  max-height:100%; 
+  background-size:100% 100%;
+  background-repeat:no-repeat; 
+  position:relative;
+}
+
+.inner-about-container {
+  padding: 3% 7%;
+  /*margin: 3%;*/
+  background-color: #DBDBDB;
+}
+
 .section-container {
 /*  background-color: #55518a; */
   padding-top: 5%;
